--- a/app/src/main/res/layout/lessons_list.xml
+++ b/app/src/main/res/layout/lessons_list.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:descendantFocusability="beforeDescendants">
 
-    <TableRow
+    <RelativeLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-                android:id="@+id/img"
-                android:layout_width="100dp"
-                android:layout_height="100dp" />
-
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:paddingRight="15dp"
+        android:background="@drawable/card_background_selector"
+        android:descendantFocusability="afterDescendants">
 
         <TextView
             android:id="@+id/txt"
@@ -19,9 +24,16 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:textSize="18sp"
-            android:layout_width="250dp"
-            android:textAlignment="textStart"
-            android:layout_height="100dp">
+            android:layout_width="200dp"
+            android:layout_height="110dp"
+            android:gravity="right">
         </TextView>
-    </TableRow>
-</TableLayout>
+
+        <ImageView
+                android:id="@+id/img"
+                android:layout_width="110dp"
+                android:layout_height="110dp" />
+
+
+    </RelativeLayout>
+</FrameLayout>
