--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,4 +23,51 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="16dp" />
+
+    <TextView
+        android:text="@string/ritm"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="17dp"
+        android:id="@+id/textView25"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="36sp"
+        android:textAlignment="viewStart"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="@string/Description"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView26"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/textView25" />
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/l5_1"
+        android:id="@+id/imageView6"
+        android:layout_above="@+id/START_LESSONS"
+        android:layout_toStartOf="@+id/imageView8"
+        android:layout_marginEnd="13dp" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/l5_18"
+        android:id="@+id/imageView8"
+        android:layout_alignTop="@+id/imageView6"
+        android:layout_alignEnd="@+id/textView26" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/l5_2"
+        android:id="@+id/imageView9"
+        android:layout_above="@+id/START_LESSONS"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="15dp" />
 </RelativeLayout>
