--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -19,15 +19,27 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:id="@+id/NAME_HEAD" />
+        android:id="@+id/NAME_HEAD"
+        android:textColor="@color/cardview_dark_background"
+        android:textStyle="normal|bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView24"
+        android:text="@string/ScoreValue"
+        android:textAlignment="textStart"
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView
         android:id="@+id/SCORE_HEAD"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/cardview_dark_background"
+        android:textStyle="normal|bold" />
 
 </LinearLayout>
