--- a/app/src/main/res/layout/activity_lesson_3_grammar_3.xml
+++ b/app/src/main/res/layout/activity_lesson_3_grammar_3.xml
@@ -57,7 +57,7 @@
 </ScrollView>
 
     <Button
-        android:text="Go to practise"
+        android:text="Go to practice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button3"
