--- a/app/src/main/res/layout/activity_lesson_10_grammar_1.xml
+++ b/app/src/main/res/layout/activity_lesson_10_grammar_1.xml
@@ -56,7 +56,7 @@
                 app:srcCompat="@drawable/l10_g1_t3" />
 
             <Button
-                android:text="Go to practise"
+                android:text="Go to practice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/button3"
