--- a/app/src/main/res/layout/activity_lesson_1_grammar.xml
+++ b/app/src/main/res/layout/activity_lesson_1_grammar.xml
@@ -93,7 +93,7 @@
             android:textAlignment="viewStart" />
 
         <Button
-            android:text="Go to practise"
+            android:text="Go to practice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/button3"
