--- a/app/src/main/res/layout/activity_lesson_3_grammar_2.xml
+++ b/app/src/main/res/layout/activity_lesson_3_grammar_2.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/imageView4" />
 
             <Button
-                android:text="Go to practise"
+                android:text="Go to practice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/button3"
