--- a/app/src/main/res/layout/activity_lesson_4_grammar_1.xml
+++ b/app/src/main/res/layout/activity_lesson_4_grammar_1.xml
@@ -127,7 +127,7 @@
                 app:srcCompat="@drawable/l4_g1_t3"/>
 
             <Button
-                android:text="Go to practise"
+                android:text="Go to practice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/button3"
