--- a/app/src/main/res/layout/activity_lesson_9_grammar_1.xml
+++ b/app/src/main/res/layout/activity_lesson_9_grammar_1.xml
@@ -53,7 +53,7 @@
                 app:srcCompat="@drawable/l9_g1_t2" />
 
             <Button
-                android:text="Go to practise"
+                android:text="Go to practice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/button3"
