--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -29,7 +29,8 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:id="@+id/textView23"
-        android:textAlignment="textStart" />
+        android:textAlignment="center"
+        android:layout_weight="0.22" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -39,9 +40,9 @@
 
     <TextView
         android:text="@string/manual_1"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:textAlignment="textStart" />
+        android:textAlignment="center" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -53,7 +54,7 @@
         android:text="@string/manual_2"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:textAlignment="textStart" />
+        android:textAlignment="center"/>
 
     <ImageView
         android:layout_width="wrap_content"
