--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,16 +14,6 @@
     tools:showIn="@layout/app_bar_main">
 
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/START_LESSONS"
-        android:text="@string/start"
-        android:onClick="StartLessons"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="16dp" />
-
     <TextView
         android:text="@string/ritm"
         android:layout_width="200dp"
@@ -37,37 +27,48 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text="@string/Description"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView26"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/textView25" />
-
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        app:srcCompat="@drawable/l5_1"
-        android:id="@+id/imageView6"
-        android:layout_above="@+id/START_LESSONS"
-        android:layout_toStartOf="@+id/imageView8"
-        android:layout_marginEnd="13dp" />
-
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         app:srcCompat="@drawable/l5_18"
         android:id="@+id/imageView8"
-        android:layout_alignTop="@+id/imageView6"
-        android:layout_alignEnd="@+id/textView26" />
+        android:layout_below="@+id/textView26"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/START_LESSONS"
+        android:text="@string/start"
+        android:onClick="StartLessons"
+        android:layout_marginBottom="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        style="@android:style/Widget.Material.Button.Borderless" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/l10_19"
+        android:id="@+id/imageView5"
+        android:layout_alignTop="@+id/imageView8"
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         app:srcCompat="@drawable/l5_2"
         android:id="@+id/imageView9"
-        android:layout_above="@+id/START_LESSONS"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="15dp" />
+        android:layout_alignTop="@+id/imageView8"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="@string/Description"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView26"
+        android:textAlignment="center"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
