--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
@@ -19,27 +19,32 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing" />
 
     <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:id="@+id/NAME_HEAD"
         android:textColor="@color/cardview_dark_background"
-        android:textStyle="normal|bold" />
+        android:textStyle="normal|bold"
+        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/textView24"
+        android:layout_width="100dp" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView24"
         android:text="@string/ScoreValue"
         android:textAlignment="textStart"
-        android:textColor="@color/colorPrimaryDark" />
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/NAME_HEAD" />
 
     <TextView
         android:id="@+id/SCORE_HEAD"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:textColor="@color/cardview_dark_background"
-        android:textStyle="normal|bold" />
+        android:textStyle="normal|bold"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/textView24" />
 
-</LinearLayout>
+</RelativeLayout>
